Common role rename and role creation for VNC related stuff.

--- a/main.yml
+++ b/main.yml
@@ -4,7 +4,16 @@
   hosts: all
   sudo: true
   roles:
-    - common
+    - dependency
   tags:
     - pre
     - common
+
+- name: VNC management
+  hosts: all
+  sudo: true
+  roles:
+    - vnc
+  tags:
+    - vnc
+
