--- a/roles/packetTracer/defaults/main.yml
+++ b/roles/packetTracer/defaults/main.yml
@@ -1,4 +1,11 @@
 ---
 
-original_path: "/Users/agg96/workspace/packetTracer/i386"
-installation_path: "/home/vagrant/packetTracer"
+original_path: "/Users/agg96/workspace/packetTracer/i386/"
+installation_path: "{{home_dir}}/packetTracer/"
+
+upstart_file: "packettracer.conf"
+upstart_log: "/var/log/upstart/packettracer.log"
+daemon_conf_file: "/etc/init/packettracer.conf"
+
+pt_path: "{{home_dir}}/packetTracer"
+pt_bin_relative_path: "bin/PacketTracer6"
