--- a/roles/packetTracer/files/packettracer.conf
+++ b/roles/packetTracer/files/packettracer.conf
@@ -4,8 +4,8 @@ author  "Aitor Gomez-Goiri <aitor.gomez-goiri@open.ac.uk>"
 
 # The following only works from Upstart 1.4 on...
 #    (to check the installed version run: initctl --version)
-setuid {{execuser}}
-setgid {{execuser}}
+setuid [[execuser]]
+setgid [[execuser]]
 
 # http://askubuntu.com/questions/47649/does-upstart-emit-hooks-for-sysv-jobs
 start on runlevel [2345] # E.g., /etc/rc2.d/S91apache2 exists
@@ -16,4 +16,4 @@ env DISPLAY=:1
 export 
 # This is needed when running Upstart<1.4...
 #    (see http://upstart.ubuntu.com/cookbook/#changing-user)
-exec start-stop-daemon --start -c {{execuser}} --exec {{pt_exec}} > {{log_file}} 2>&1
+exec start-stop-daemon --start -c [[execuser]] --exec [[pt_exec]] > [[log_file]] 2>&1
