--- a/roles/packetTracer/tasks/upstart.yml
+++ b/roles/packetTracer/tasks/upstart.yml
@@ -11,45 +11,12 @@
     - packetTracer
 
 
-- name: Replace the user which executes the upstart daemon
-  replace: dest="{{daemon_conf_file}}" regexp="\{\{execuser\}\}" replace="{{remote_user}}" # backup=yes
-  sudo: True
-  tags:
-    - upstart
-    - daemon
-    - replace
-    - configuration
-    - packetTracer
-    - instance
-
-
-- name: Replace the path of the PacketTracer instance
-  replace: dest="{{daemon_conf_file}}" regexp="\{\{pt_exec\}\}" replace="{{ pt_path }}/{{ pt_bin_relative_path }}" # backup=yes
-  sudo: True
-  tags:
-    - upstart
-    - daemon
-    - replace
-    - configuration
-    - packetTracer
-    - instance
-
-
-
-- name: Replace the user which executes the upstart daemon
-  replace: dest="{{daemon_conf_file}}" regexp="\{\{execuser\}\}" replace="{{remote_user}}" # backup=yes
-  sudo: True
-  tags:
-    - upstart
-    - daemon
-    - replace
-    - configuration
-    - packetTracer
-    - instance
-
-
-- name: Specify the log file for the Upstart job
-  replace: dest="{{daemon_conf_file}}" regexp="\{\{log_file\}\}" replace="{{ upstart_log }}"
+- name: Replace variables in upstart task (the user which executes it, the path to the PacketTracer instance and the log file)
+  replace: dest="{{daemon_conf_file}}" regexp="\[\[{{item.name}}\]\]" replace="{{item.value}}" # backup=yes
+  with_items:
+    - { name: 'execuser', value: '{{remote_user}}' }
+    - { name: 'pt_exec', value: '{{ pt_path }}/{{ pt_bin_relative_path }}' }
+    - { name: 'log_file', value: '{{ upstart_log }}' }
   sudo: True
   tags:
     - upstart
