--- a/roles/packetTracer/files/packettracer.conf
+++ b/roles/packetTracer/files/packettracer.conf
@@ -12,7 +12,7 @@ start on runlevel [2345] # E.g., /etc/rc2.d/S91apache2 exists
 stop on runlevel [016]   # E.g., /etc/rc0.d/K09apache2 exists
 
 
-env DISPLAY=:1
+env DISPLAY=:[[display_number]]
 export 
 # This is needed when running Upstart<1.4...
 #    (see http://upstart.ubuntu.com/cookbook/#changing-user)
