--- a/roles/packetTracer/tasks/upstart.yml
+++ b/roles/packetTracer/tasks/upstart.yml
@@ -17,6 +17,7 @@
     - { name: 'execuser', value: '{{remote_user}}' }
     - { name: 'pt_exec', value: '{{ pt_path }}/{{ pt_bin_relative_path }}' }
     - { name: 'log_file', value: '{{ upstart_log }}' }
+    - { name: 'display_number', value: '{{ x_display }}' }
   sudo: True
   tags:
     - upstart
