Adding 'apt update' as a new role (and configuring other roles' dependencies on it).

--- a/roles/packetTracer/tasks/install.yml
+++ b/roles/packetTracer/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Check if folder existed
+- name: Check if folder exists
   stat: path="{{ installation_path }}"
   register: instp
   tags:
