Putting some order in the 'vnc' role and ensuring that the passwd file is only generated when it does not exist beforehand.

--- a/roles/vnc/tasks/main.yml
+++ b/roles/vnc/tasks/main.yml
@@ -1,208 +1,19 @@
 ---
 
-# Check this: https://www.digitalocean.com/community/tutorials/how-to-install-and-configure-vnc-on-ubuntu-14-04
+# file: main.yml
 
-# Needed at least the first time after creating vagrant machine.
-- name: Update packages
-  sudo: True
-  apt: update_cache=yes
-  when: ansible_os_family == "Debian"
-  environment: proxy_env
+
+- name: Check if VNC passwd file exists
+  stat: path="{{home_dir}}/.vnc/passwd"
+  register: passfile
   tags:
-    - apt
-    - update
-    - debian
-
-
-- name: Install VNC server
-  sudo: True
-  apt:
-    pkg: "{{ item }}"
-    state: present
-  when: ansible_os_family == "Debian"
-  environment: proxy_env
-  with_items:
-    - tightvncserver
-    - xfce4
-    - xfce4-goodies
-    #- kubuntu-desktop # Uncomment if we want to use KDE instead of xfce...
-  tags:
-    - apt
-    - installation
-    - install
-    - vnc
-    - server
-    - kde
-    - debian
-
-
-- name: Create ICEauthority file
-  file:
-    path: "{{home_dir}}/.ICEauthority"
-    state: touch
-    owner: "{{remote_user}}"
-    group: "{{remote_user}}"
-  tags:
-    - user
-    - folder
-    - kde
-
-
-- name: Create user folder
-  file:
-    path: "{{home_dir}}/.vnc"
-    state: directory
-    owner: "{{remote_user}}"
-  tags:
-    - user
-    - folder
-    - vnc
-    - server
-    - configuration
-    - folder
-
-
-# Otherwise it will prompt for a new password the first time (and ansible will get stuck).
-# - name: "Copy VNC passwd file (WARNING: generate other file with vncpasswd before using in production site!)"
-#   copy:
-#     src: "passwd"
-#     dest: "{{home_dir}}/.vnc/passwd"
-#     owner: "{{remote_user}}"
-#     group: "{{remote_user}}"
-#     mode: "u=rw"
-#   tags:
-#     - copy
-#     - installation
-#     - install
-#     - vnc
-#     - passwd
-#     - file
-
-
-- name: Installing expect command to avoid user interaction in VNC passwd generation
-  sudo: True
-  apt:
-    pkg: expect
-    state: present
-  when: ansible_os_family == "Debian"
-  environment: proxy_env
-  tags:
-    - apt
-    - installation
-    - install
-    - expect
-    - debian
-
-
-- name: Copy script created to generate passwd file without requiring user input
-  copy:
-    src: "vncpasswd.sh"
-    dest: "{{pass_script}}"
-    owner: "{{remote_user}}"
-    group: "{{remote_user}}"
-    mode: "u=rwx,g=rx,o=r"
-  tags:
-    - copy
-    - installation
-    - install
-    - vnc
     - passwd
     - file
+    - existence
 
 
-- name: "Create a VNC passwd file (WARNING: change the password before using it in a production site!)"
-  command: "{{pass_script}} {{vnc_pass}}"
-  tags:
-    - copy
-    - installation
-    - install
-    - vnc
-    - passwd
-    - file
-
-
-- name: Copy VNC configuration file
-  copy:
-    src: "xstartup"
-    dest: "{{home_dir}}/.vnc/xstartup"
-    owner: "{{remote_user}}"
-    group: "{{remote_user}}"
-    mode: "u=rwx,g=rx,o=r"
-  tags:
-    - copy
-    - installation
-    - install
-    - vnc
-    - configuration
-    - file
-
-
-- name: Create init script
-  sudo: True
-  copy:
-    src: "vncserver"
-    dest: "{{init_script}}"
-    owner: "{{remote_user}}"
-    group: "{{remote_user}}"
-    mode: "u=rwx,g=rx,o=rx"
-  tags:
-    - copy
-    - vnc
-    - init
-    - script
-    - file
-
-
-- name: Replace variables in init script
-  sudo: True
-  replace: dest="{{init_script}}" regexp="\[\[{{item.name}}\]\]" replace="{{item.value}}"
-  with_items:
-    - { name: 'execuser', value: '{{remote_user}}' }
-    - { name: 'display_number', value: '{{x_display}}' }
-  notify:
-    - restart vncserver
-  tags:
-    - replace
-    - vnc
-    - init
-    - script
-    - file
-
-
-- name: Make it run in the bootup
-  sudo: True
-  command: "update-rc.d vncserver defaults"
-  tags:
-    - configure
-    - vnc
-    - init
-    - script
-    - file
-
-# vncserver -kill :1
-# - name: Kill existing VNC server in port 5900
-#   command: "vncserver -kill :{{x_display}}"
-#   ignore_errors: True  # If it didn't exist, is ok.
-#   tags:
-#     - vnc
-#     - server
-#     - kill
-
-
-# vncserver :1
-# access: vnc://192.168.34.2:5901
-# - name: Init VNC server
-#   shell: "/usr/bin/vncserver :{{x_display}}"
-#   tags:
-#     - vnc
-#     - server
-#     - start
-
-
-# The command above does not open kde properly so this one trying it again...
-# - name: Start KDE
-#   shell: "export HOME={{home_dir}} && export DISPLAY=:{{x_display}} && {{home_dir}}/.vnc/xstartup"
-#   tags:
-#     - vnc
-#     - server
-#     - start
+- include: install.yml
+- include: create_passfile.yml
+  # It creates the passwd file only if it does not exist yet.
+  when: not passfile.stat.exists 
+- include: configure_init.yml
