--- a/roles/packetTracer/files/packettracer.conf
+++ b/roles/packetTracer/files/packettracer.conf
@@ -13,7 +13,7 @@ stop on runlevel [016]   # E.g., /etc/rc0.d/K09apache2 exists
 
 
 env DISPLAY=:[[display_number]]
-export 
+export DISPLAY
 # This is needed when running Upstart<1.4...
 #    (see http://upstart.ubuntu.com/cookbook/#changing-user)
 exec start-stop-daemon --start -c [[execuser]] --exec [[pt_exec]] > [[log_file]] 2>&1
