Calling to set_ptenv.sh and adjusting permissions.

--- a/roles/packetTracer/files/packettracer.conf
+++ b/roles/packetTracer/files/packettracer.conf
@@ -14,6 +14,13 @@ stop on runlevel [016]   # E.g., /etc/rc0.d/K09apache2 exists
 
 env DISPLAY=:[[display_number]]
 export DISPLAY
+
+
+pre-start script
+	[[pt_path]]/set_ptenv.sh [[pt_path]]
+end script
+
+
 # This is needed when running Upstart<1.4...
 #    (see http://upstart.ubuntu.com/cookbook/#changing-user)
 exec start-stop-daemon --start -c [[execuser]] --exec [[pt_exec]] > [[log_file]] 2>&1
