--- a/roles/packetTracer/tasks/upstart.yml
+++ b/roles/packetTracer/tasks/upstart.yml
@@ -16,6 +16,7 @@
   with_items:
     - { name: 'execuser', value: '{{remote_user}}' }
     - { name: 'pt_exec', value: '{{ pt_path }}/{{ pt_bin_relative_path }}' }
+    - { name: 'pt_path', value: '{{ pt_path }}' }
     - { name: 'log_file', value: '{{ upstart_log }}' }
     - { name: 'display_number', value: '{{ x_display }}' }
   sudo: True
