--- a/roles/packetTracer/files/packettracer.conf
+++ b/roles/packetTracer/files/packettracer.conf
@@ -23,4 +23,4 @@ end script
 
 # This is needed when running Upstart<1.4...
 #    (see http://upstart.ubuntu.com/cookbook/#changing-user)
-exec start-stop-daemon --start -c [[execuser]] --exec [[pt_exec]] > [[log_file]] 2>&1
+exec start-stop-daemon --start -c [[execuser]] --exec [[pt_exec]] [[pt_path]]/saves/FORGE/ibookdemo611.pkt > [[log_file]] 2>&1
