Instead of copying the PacketTracer installation folder, we will copy its compressed version and unpack it on the provisioned machine. The new procedure is much faster than the previous one.

--- a/roles/packetTracer/defaults/main.yml
+++ b/roles/packetTracer/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-original_path: "/Users/agg96/workspace/packetTracer/i386/"
+original_path: "/Users/agg96/workspace/packetTracer/i386.zip"
 installation_path: "{{home_dir}}/packetTracer/"
 
 upstart_file: "packettracer.conf"
