Adding web group and automatically installing tomcat7 on machines belonging to this group (it is downloaded from the official website).

--- a/main.yml
+++ b/main.yml
@@ -1,9 +1,6 @@
 ---
 
 
-- name: Common tasks in all servers
-  hosts: all
-  roles:
-    - packetTracer
-  tags:
-    - packettracer
+# file: main.yml
+- include: webservers.yml
+- include: ptinstances.yml
