Removing harmful sudo which causes a vnc password to be generated for the root user (not for the vagrant one!).

--- a/roles/vnc/tasks/main.yml
+++ b/roles/vnc/tasks/main.yml
@@ -18,5 +18,5 @@
 
 - include: configure_init.yml
 
-- name: "Connect to vnc://192.168.34.2:5901"
-  debug: msg="If everything went ok, you should be able to connect to vnc://192.168.34.2:5901"
+- name: "Connect to vnc://192.168.34.X:5901"
+  debug: msg="If everything went ok, you should be able to connect to vnc://192.168.34.X:5901"
