Not copying the PT user folder (as I have discovered that it is not necessary).

--- a/ptinstances.yml
+++ b/ptinstances.yml
@@ -5,6 +5,7 @@
 - name: Install and configure PacketTracer instance
   hosts: pt_backend
   roles:
-    - docker
+#    - packetTracer_unique
+    - packetTracer_multiple
   tags:
     - packetTracer
