Installing gunicorn and creating script to run the app on it.

--- a/roles/packetTracer_management_api/defaults/main.yml
+++ b/roles/packetTracer_management_api/defaults/main.yml
@@ -9,3 +9,4 @@ config_file: "{{home_dir}}/config.ini"
 database_file: "{{home_dir}}/database.db"
 low_port: 39000
 high_port: 39050
+run_script: "{{home_dir}}/start"
