--- a/roles/packetTracer_management_api/tasks/main.yml
+++ b/roles/packetTracer_management_api/tasks/main.yml
@@ -3,6 +3,6 @@
 # file: main.yml
 
 - include: app.yml
-# - include: gunicorn.yml
+- include: gunicorn.yml
 # - include: nginx.yml
 # - include: supervisor.yml
