Handling gunicorn process with supervisor.

--- a/roles/packetTracer_management_api/tasks/nginx.yml
+++ b/roles/packetTracer_management_api/tasks/nginx.yml
@@ -34,6 +34,8 @@
 - name: Create symbolic link to enable the config file of our app
   file: src=/etc/nginx/sites-available/flaskapp dest=/etc/nginx/conf.d/flaskapp.conf state=link
   become: True
+  notify:
+    - restart nginx
   tags:
     - link
     - config
