Docker management API and docker installation roles were merged.

--- a/roles/packetTracer_multiple/defaults/main.yml
+++ b/roles/packetTracer_multiple/defaults/main.yml
@@ -7,6 +7,11 @@ url: "git+https://github.com/gomezgoiri/pt-instances-management.git#egg=ptinstan
 
 config_file: "{{home_dir}}/config.ini"
 database_file: "{{home_dir}}/database.db"
+devel_script: "{{home_dir}}/development_start"
+
 low_port: 39000
 high_port: 39050
 run_script: "{{home_dir}}/start"
+
+
+docker_image: "bla"
