Redis installation adapted from Debian-like to "Red Hat 7"-like systems (tested with CentOS 7).

--- a/roles/redis/handlers/main.yml
+++ b/roles/redis/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: restart redis
-  service: name=redis-server state=restarted
+  service: name=redis state=restarted
   sudo: True
   tags:
     - redis
