--- a/roles/tomcat7/handlers/main.yml
+++ b/roles/tomcat7/handlers/main.yml
@@ -1,4 +1,8 @@
 ---
 
-- name: restart tomcat7
+- name: restart tomcat7-manual
   shell: "{{tomcat7_path}}/bin/shutdown.sh && {{tomcat7_path}}/bin/startup.sh"
+
+
+- name: restart tomcat7-yum
+  service: name=tomcat state=restarted
