--- a/roles/tomcat7/tasks/manual_install.yml
+++ b/roles/tomcat7/tasks/manual_install.yml
@@ -1,7 +1,18 @@
 ---
 
+##  Warning: WebSockets do not work in the current tomcat7 on the APT repositories
+##  (install "tomcat7-examples" and go to /examples/websocket/echo.xhtml to check it)
+# - name: Install tomcat7 using apt
+#   apt: pkg="{{ item }}" state=present
+#   when: ansible_os_family == "Debian"
+#   environment: proxy_env
+#   with_items:
+#     - "tomcat7"
+#     - "tomcat7-admin"
+
+
 - name: Install JRE using apt
-  sudo: True
+  become: True
   apt: pkg=default-jre state=present
   when: ansible_os_family == "Debian"
   environment: proxy_env
@@ -13,11 +24,29 @@
     - java
     - debian
 
-- name: Download tomcat7
+
+- name: Download Tomcat 7
   get_url: url="{{tomcat7_url}}" dest="{{tomcat7_download}}" mode=0440
   environment: proxy_env
 
-- name: Unzip tomcat7
+
+- name: Unzip Tomcat 7
   unarchive: src="{{tomcat7_download}}" dest="{{home_dir}}" copy=no
-  notify:
-    - restart tomcat7
+
+
+- include_vars: deployment_credentials.yml
+- name: Set Tomcat 7 configuration
+  template:
+    src: tomcat-users.xml.j2
+    dest: "{{ tomcat7_path }}/conf/tomcat-users.xml"
+    owner: "{{ remote_user }}"
+    group: "{{ remote_user }}"
+    mode: 0744
+  notify: restart tomcat7-manual
+  tags:
+    - configuration
+    - tomcat7
+
+
+- name: Remember to start tomcat7 manually on restart using the following command
+  debug: msg="{{tomcat7_path}}/bin/startup.sh"
