--- a/roles/tomcat7/tasks/yum_install.yml
+++ b/roles/tomcat7/tasks/yum_install.yml
@@ -4,7 +4,7 @@
 #  (install "tomcat7-examples" and go to /examples/websocket/echo.xhtml to check it)
 
 
-- name: Install tomcat7 using yum
+- name: Install Tomcat using yum
   yum: name="{{ item }}" state=present
   with_items:
     - "tomcat"
@@ -17,14 +17,21 @@
 
 
 - include_vars: deployment_credentials.yml
-- name: Set Tomcat 7 configuration
+- name: Set Tomcat configuration
   template:
     src: tomcat-users.xml.j2
     dest: "{{ tomcat7_yum_path }}/tomcat-users.xml"
     owner: "{{ remote_user }}"
     group: "{{ remote_user }}"
     mode: 0744
-  notify: restart tomcat7-yum
   tags:
     - configuration
+    - tomcat7
+
+
+- name: Start Tomcat upon reboot
+  shell: systemctl enable tomcat
+  notify: restart tomcat7-yum
+  tags:
+    - enable
     - tomcat7
